--- a/feladat1/src/app/app.component.css
+++ b/feladat1/src/app/app.component.css
@@ -8,3 +8,9 @@
   margin-top: 30px;
   text-align: center;
 }
+
+.bookstore section{
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 0;
+}
