--- a/feladat2/src/app/app.component.html
+++ b/feladat2/src/app/app.component.html
@@ -1,2 +1,60 @@
 <div>
+    
+    <h1>Az antikvárium története</h1> 
+
+    <p> Az antikváriumot 1901-ben alapították, még az Osztrák–Magyar Monarchia idején. Magát az épületet többször újjá kellet építeni, ez azonban lehetőséget adott a megújításra, korszerűsítésre. </p>
+
+    <p> A jelenlegi épület 2019-ben lett felújítva. </p>
+    <section>
+    <h2> Hírességek, akik itt jártak </h2>
+
+    <div class="row">
+        <div class="col-sm-4 mb-4 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Ady Endre</h3>
+              <p class="card-text">Többször is kikölcsönözte Deák Ferenc műveit</p>
+              <a href="https://hu.wikipedia.org/wiki/Ady_Endre">Wikipédia</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 mb-4 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Móra Ferenc</h3>
+              <p class="card-text">Az Én Újságom c. gyermeklapba írt művei közül 50-nek a kéziratát az antikváriumnak adományozta</p>
+              <a href="https://hu.wikipedia.org/wiki/Móra_Ferenc">Wikipédia</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 mb-4 mb-sm-0">
+            <div class="card">
+              <div class="card-body">
+                <h3 class="card-title">Névtelen adományozó</h3>
+                <p class="card-text">1992-ben 500 000 Ft-tal támogatta az antikvárium működését</p>
+              </div>
+            </div>
+          </div>
+      </div>
+
+    </section>
+    <section>
+
+    <h2>Új híresség jelzése</h2>
+
+    <form>
+        <div class="mb-3">
+            <label for="wikilink" class="form-label">Wikipédia link</label>
+            <br>
+            <input type="text" name="wikilink" id="wikilink" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="leiras" class="form-label">Leírás</label>
+            <br>
+            <input type="text" name="leiras" id="leiras" class="form-control">
+        </div>
+            <button type="submit" class="btn btn-primary">Elküld</button>
+
+    </form>
+    </section>
 </div>
